			   XPCE ChangeLog
			   ==============

* FIXED: Error handling default file in finder on Windows.

* FIXED: Metafile handling in PceDraw (proper detection of win_metafile
  and win_printer classes).

* FIXED: Work around IE 5.5 bug in javascript cookie handling for
  library(http/html_hierarchy).

* FIXED: Editor->geometry problem with h = @default, introduced with the
  patch handling very small editors.  Shows up with GUI tracer making the
  binding and source window smaller each action.

VERSION 5.1.8#2, distributed with SWI-Prolog 4.0.9#2
====================================================

* FIXED: `event<-key' to distinguish between RETURN and Control-M as well
  as TAB and Control-I.  Also fixed detection of control-key in Windows,
  detected by Paul Holmes-Higgin.

* FIXED: Class editor to handle editors with very small height (notably
  1 line or less) properly.  Reported by Paul Holmes-Higgin.

* FIXED: PceEmacs: honour style-check options (notably -atom) appearing
  in the file being coloured.

* ADDED: Make `{text,text_item}->catch_all' accept methods associated
  with class String, regardless of the text<-string.

* ENHANCED: Performance of PceEmacs colourisation in Prolog mode by
  removing some non-determinism


VERSION 5.1.8
=============

* ADDED: `table->insert_row' to allow adding a the row to be inserted.
  This allows for subclassing class table_row and play around with rows.

* ADDED: Object Inspector to display non-member slots of subclasses
  of chain and vector.

* MODIFIED: Control-I is now distinct from TAB, as is Control-M from
  RETURN.  This has been accomplished by passing the raw event to the
  ->typed methods and change the calculation of the key-name in class
  key-binding to check the status of the control-key.  It is anticipated
  that this has no consequences for user-code, though user-code refining
  or invoking the ->typed methods will not profit from this change if